--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text to Image</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <title>Pixie Lab</title>
 </head>
 <body>
-    <h1>Text to Image</h1>
-    <textarea id="prompt" rows="4" cols="50" placeholder="Enter your prompt"></textarea><br>
-    <button onclick="generate()">Generate</button><br>
-    <div id="results"></div>
+    <div id="pub2">
+        <div class="pub_header">
+            <p class="publicity-text">publicity</p>
+        </div>
+    </div>
+
+    <div id="menu">
+        <div id="logo">
+            <h1>PIXIE LAB <span class="beta-text" style="font-weight: normal;"><i>beta</i></span></h1> 
+        </div>
+        <div id="login">
+            <a>...</a>
+        </div>
+    </div>
+
+    <div id="pub1">
+        <div class="pub_header">
+            <p class="publicity-text">publicity</p>
+        </div>
+    </div>
+
+    <div id="content">
+        <div id="input">
+            <p class="section-title">Settings</p>
+            <p class="dropdown-label">Ratio</p>        
+            <div class="dropdown">    
+                <button class="dropbtn" onclick="toggleDropdown('ratioDropdown')">Portrait (4:3)</button>
+                <div id="ratioDropdown" class="dropdown-content">
+                    <a href="#" onclick="updateButtonText('ratioDropdown', this)">Portrait (4:3)</a>
+                    <a href="#" onclick="updateButtonText('ratioDropdown', this)">Widescreen (16:9)</a>
+                    <a href="#" onclick="updateButtonText('ratioDropdown', this)">Square (1:1)</a>
+                    <a href="#" onclick="updateButtonText('ratioDropdown', this)">Mobile Vertical (9:16)</a>
+                    <a href="#" onclick="updateButtonText('ratioDropdown', this)">Landscape (3:2)</a>
+                </div>
+            </div>
+            <p class="dropdown-label">Resolution</p>
+            <div class="dropdown">    
+                <button class="dropbtn" onclick="toggleDropdown('resolutionDropdown')">720p</button>
+            </div>
+
+            <p class="dropdown-label">Style</p>
+            <div class="dropdown">    
+                <button class="dropbtn" onclick="toggleDropdown('styleDropdown')">Style</button>
+            </div>
+
+            <p class="section-title" style="padding-top: 15px;">Prompt</p>
+            <textarea id="prompt" rows="4" cols="50" placeholder="Describe image to generate"></textarea><br>
+            <button id="generateButton" onclick="generate()">Generate</button><br>
+        </div>
+        <div id="results">
+            <img id="loading" src="https://i.giphy.com/PkoBC2GlkLJ5yFIWtf.webp" style="display: none;">
+            <div class="example-container">
+                <img id="example" src="https://uploaddeimagens.com.br/images/004/791/220/original/6f2470ab-268f-4397-90ad-62965b521b87.png?1717418789">
+                <div class="overlay">
+                    <p>'A sculpture of a colourful abstract duck isolated with a shape from there, in the style of edward hopper, white background'
+                        <a style="float: left; padding-top: 300px; font-size: 14px;">Try this prompt</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="footer">
+        <p>© 2024 Pixie Lab</p>
+    </div>
 
     <script>
         function generate() {
             var prompt = document.getElementById('prompt').value;
+            var resultsDiv = document.getElementById('results');
+            var loadingGif = document.getElementById('loading');
+            var loadingImg = document.getElementById('example');
+            
+            // Limpar resultados anteriores e mostrar GIF de carregamento
+            resultsDiv.innerHTML = '';
+            resultsDiv.appendChild(loadingGif);
+            resultsDiv.appendChild(loadingImg);
+            loadingGif.style.display = 'block';
+            loadingImg.style.display = 'none';
+
             fetch('/generate', {
                 method: 'POST',
                 headers: {
@@ -25,17 +101,33 @@
             })
             .then(response => response.json())
             .then(data => {
-                var resultsDiv = document.getElementById('results');
-                resultsDiv.innerHTML = '';
+                // Esconder GIF de carregamento
+                loadingGif.style.display = 'none';
+                
                 data.results.forEach(imagePath => {
                     var img = document.createElement('img');
                     img.src = '/' + imagePath;  // Usa caminho relativo
                     resultsDiv.appendChild(img);
                 });
             })
-            .catch(error => console.error('Error:', error));
+            .catch(error => {
+                console.error('Error:', error);
+                // Esconder GIF de carregamento em caso de erro
+                loadingGif.style.display = 'none';
+            });
         }
+
+        // Event listener para fazer o scroll suave até a parte inferior do site em dispositivos móveis
+        document.addEventListener('DOMContentLoaded', function() {
+            var generateButton = document.getElementById('generateButton');
+            generateButton.addEventListener('touchstart', function() {
+                window.scrollTo({
+                    top: document.body.scrollHeight,
+                    behavior: 'smooth' // Ativa o scroll suave
+                });
+            });
+        });
     </script>
+
 </body>
 </html>
-
