--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <meta name="google-adsense-account" content="ca-pub-3095431383693299">
+
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <script>
+        // Verifica se o protocolo é HTTP
+        if (window.location.protocol === "http:") {
+            window.location.href = "https://" + window.location.host + window.location.pathname;
+        }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>Pixie Lab</title>
+    <title>Pixie Lab - Transforme texto em imagens de forma rápida</title>
+    <meta name="description" content="Pixie Lab é uma ferramenta online que converte texto em imagens de forma rápida e fácil. Experimente agora!">
+
 </head>
 <body>
     <div id="pub2">
-        <div class="pub_header">
-            <p class="publicity-text">publicity</p>
-        </div>
+                <div class="pub_header">
+                    <p class="publicity-text">
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3095431383693299"
+            crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-format="fluid"
+            data-ad-layout-key="-h4+1+17-4m+5u"
+            data-ad-client="ca-pub-3095431383693299"
+            data-ad-slot="2638448960"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+                </p>
+                </div>
     </div>
 
     <div id="menu">
@@ -62,7 +85,7 @@
         <div id="results">
             <img id="loading" src="https://i.giphy.com/PkoBC2GlkLJ5yFIWtf.webp" style="display: none;">
             <div class="example-container">
-                <img id="example" src="https://uploaddeimagens.com.br/images/004/791/220/original/6f2470ab-268f-4397-90ad-62965b521b87.png?1717418789">
+                <img id="example" src="https://uploaddeimagens.com.br/images/004/791/220/original/6f2470ab-268f-4397-90ad-62965b521b87.png?1717418789" alt="Exemplo de imagem gerada pelo Pixie Lab">
                 <div class="overlay">
                     <p>'A sculpture of a colourful abstract duck isolated with a shape from there, in the style of edward hopper, white background'
                         <a style="float: left; padding-top: 300px; font-size: 14px;">Try this prompt</a>
@@ -71,6 +94,20 @@
             </div>
         </div>
     </div>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3095431383693299"
+     crossorigin="anonymous"></script>
+<!-- pub_display_quadraro -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3095431383693299"
+     data-ad-slot="3028696741"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 
     <div id="footer">
         <p>© 2024 Pixie Lab</p>
